--- a/src/components/HeaderResults/HeaderResults.scss
+++ b/src/components/HeaderResults/HeaderResults.scss
@@ -2,7 +2,7 @@
   box-shadow: 2px 0 1px #0b3056;
 
   .navbar {
-    width: 100vw;
+    width: 100%;
   }
 }
 
